# park-chu-bot

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/: config.py  main.py  request.py  selecciones.txt
src/views/: age.py  available_positions.py  average.py  favoured_foot.py  favoured_side.py  height.py  nationality.py  options.py  registered_position.py  skin_colour.py
